# vetkd-devkit

./: Cargo.toml  package-lock.json
backend/rs/ic_vetkeys/src/utils/: mod.rs
examples/basic_ibe/frontend/: package.json
examples/basic_ibe/frontend/src/: main.ts
examples/basic_timelock_ibe/frontend/src/: main.ts
examples/password_manager/frontend/src/: main.ts
examples/password_manager_with_metadata/: deploy_locally.sh
examples/password_manager_with_metadata/frontend/: package-lock.json  package.json
examples/password_manager_with_metadata/frontend/src/: main.ts
examples/toolkit/: README.md  dfx.json
examples/toolkit/src/backend/: Cargo.toml
examples/toolkit/src/backend/src/: chainkey_testing_canister.rs  lib.rs
frontend/ic_vetkeys/src/utils/: utils.test.ts  utils.ts
sdk/ic_vetkd_sdk_utils/: package.json
sdk/ic_vetkd_sdk_utils/src/: index.ts
