[package]
name = "backend"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ic-vetkd-cdk-types = { path = "../../../../cdk/types" }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_bytes = { workspace = true }
